fixed global styling bug by moving global styles to styles.scss and created basic spacing for work order column

--- a/work-order-timeline/src/app/features/timeline/components/timeline-grid/timeline-grid.scss
+++ b/work-order-timeline/src/app/features/timeline/components/timeline-grid/timeline-grid.scss
@@ -1,5 +1,6 @@
 .timeline-container {
   display: flex;
+  margin-left: 102px; 
   height: 600px;
   border: 1px solid #ccc;
 }
